fix the spacing around usernames for mods, admins, OPs, and Blizzarders

--- a/css/flair.scss
+++ b/css/flair.scss
@@ -31,7 +31,7 @@ a.author.submitter:after {
 
 .author, .tagline .author {
   font-weight: bold;
-  padding: 3px 5px 4px 6px !important;
+  padding: 3px 2px 4px 1px;
   border-radius:3px;
   color:#222;
 }
@@ -41,6 +41,11 @@ a.author.submitter:after {
 p.tagline, .tagline { height: 18px; margin: 4px 0 0; border: 0px; }
 .tagline a:hover, .fancy-toggle-button a:hover { border-bottom: 0px; }
 
+.content .thing .tagline .author.admin, 
+.content .thing .tagline.author.moderator,
+.content .thing .tagline .author.submitter {
+  padding:2px 5px 4px 6px;
+  }
 /**
  * CSS sprite code generated by Fluxflashor's Flair Generator
  * http://github.com/Fluxflashor/flairgen
@@ -162,9 +167,6 @@ p.tagline, .tagline { height: 18px; margin: 4px 0 0; border: 0px; }
 .thing .tagline .flair-warrior+a.submitter:visited,.thing .tagline .flair-alliance-warrior+a.submitter:visited,.thing .tagline .flair-horde-warrior+a.submitter:visited
   { color: #C79C6E !important;background-color:rgba(0,0,0,0.25)!important; border:1px solid #999;}
 
-/* Mods as mods */
-
-
 /* Friends with Flair - Get a special icon in addition to their normal looks */
 html .thing .tagline .author.friend {
   border-radius:0;
@@ -215,10 +217,16 @@ li.flairsample-left { padding-top: 5px; }
   width: 20px;
   height: 13px;
   background-position:-7px -855px;
+  color:#eee
 }
 
-.flair-blizzard+a.author:visited, .flair-rainbowdash+a.author:visited { 
-  color: #00B4FF !important; 
+.flair-blizzard+a.author,
+.flair-blizzard+a.author:visited {
+  color: #eee !important;
+  background:#022c3c;
+  border-radius:0;
+  padding-left:5px;
+  padding-right:6px;
 }
 
 /* Blizzard Employees - Job Titles */
@@ -228,19 +236,18 @@ a.author[href$='reddit.com/user/WatcherDev']:after, a.author[href$='reddit.com/u
 a.author[href$='reddit.com/user/Eldtyara']:after, a.author[href$='reddit.com/user/Crithto']:after {
   margin-left: 5px;
   padding: 2px 4px;
-  border: 1px solid #000000;
-  border-radius: 3px;
   background-color: #1D1D1D;
 }
 
-a.author[href$='reddit.com/user/Ghostcrawler']:after { content: "Greg Street (Blizzard Emeritus)"; }
-a.author[href$='reddit.com/user/Kalgan']:after { content: "Tom Chilton (Game Director)"; }
-a.author[href$='reddit.com/user/Zarhym']:after { content: "Jonathan Brown (Community Manager)"; }
-a.author[href$='reddit.com/user/TheFargo']:after { content: "Dave Kosak (Lead Quest Designer)"; }
-a.author[href$='reddit.com/user/WatcherDev']:after { content: "Ion Hazzikostas (Lead Encounter Designer)"; }
-a.author[href$='reddit.com/user/Araxom']:after { content: "Blizzard Customer Support"; }
-a.author[href$='reddit.com/user/Eldtyara']:after { content: "Community Manager EU"; }
-a.author[href$='reddit.com/user/Crithto']:after { content: "Community Team NA"; }
+a.author[href$='reddit.com/user/Ghostcrawler']:after { content: " - Greg Street (Blizzard Emeritus)"; }
+a.author[href$='reddit.com/user/Kalgan']:after { content: " - Tom Chilton (Game Director)"; }
+a.author[href$='reddit.com/user/Zarhym']:after { content: " - Jonathan Brown (Community Manager)"; }
+a.author[href$='reddit.com/user/TheFargo']:after { content: " - Dave Kosak (Lead Quest Designer)"; }
+a.author[href$='reddit.com/user/WatcherDev']:after { content: " - Ion Hazzikostas (Lead Encounter Designer)"; }
+a.author[href$='reddit.com/user/Araxom']:after { content: " - Blizzard Customer Support"; }
+a.author[href$='reddit.com/user/Eldtyara']:after { content: " - Community Manager EU"; }
+a.author[href$='reddit.com/user/Crithto']:after { content: " - Community Team NA"; }
+
 
 /* Popular WoWFansite Flairs */
 .flair-fansite-wowhead::after { 
@@ -323,14 +330,20 @@ a.author[href$='reddit.com/user/Crithto']:after { content: "Community Team NA"; 
 
 
 /* Moderators */
-#siteTable .thing.tagline  .author.moderator, .thing .tagline .author.moderator:visited,
-#siteTable .comment a.author.moderator, .comment a.author.moderator:visited {
+#siteTable .thing .tagline .author.moderator, 
+#siteTable .thing .tagline .author.moderator:visited,
+#siteTable .comment a.author.moderator, 
+#siteTable .comment a.author.moderator:visited {
   color: #fff;
   background-color: #252 !important;
   text-shadow: 0 0 0;
+  padding:3px 6px 4px 5px;
 }
 .thing .tagline .author.moderator::after,
 .comment a.author.moderator::after {
   content: " (moderator)";
   }
- 
+.thing .tagline .author.admin::after,
+.comment a.author.admin::after {
+  content: " (reddit admin)";
+  }
